tests/src/snapshots/fe_compiler_tests__compile_errors__bad_tuple_attr2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Invalid attempt to access tuple field
  ┌─ fixtures/compile_errors/bad_tuple_attr2.fe:6:27
  │
6 │         self.my_sto_tuple.m
  │                           ^ Invalid attempt
  │
  = Note: Tuple values are accessed via `itemN` properties such as `item0` or `item1`


